--- a/css/main.css
+++ b/css/main.css
@@ -88,9 +88,15 @@ textarea {
    ========================================================================== */
 /*--------BASE HEADER - FOOTER STYLES----------*/
 
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
 header {
   display: flex;
   justify-content: center;
+  padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -98,11 +104,27 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
 }
 
+img src {
+  width: 60%;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  padding: 10px 0 20px 0;
+}
+header nav {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+}
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
 
 footer {
@@ -110,12 +132,31 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  padding-top: 50px;
 }
 
+footer .content-wrapper{
+  width: 55%
+}
+
+footer .contact h4{
+  padding: 20px 0;
+  margin: 0;
+}
+
+footer .contact address{
+  padding-bottom: 50px;
+}
+
+footer .social h4 {
+  margin: 0;
+  padding: 20px 0;
+}
 footer .social-icons{
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding-bottom: 50px;
 }
 
 footer .social-icons p {
@@ -124,34 +165,93 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .copyright{
+  padding: 20px 0;
+}
+
 
 /*------------HOMEPAGE-------------*/
 
 .hero-area {
   display: flex;
   justify-content: center;
+  padding: 50px 0;
 }
 
 aside {
   display: flex;
   justify-content: center;
+  padding: 50px 0;
 }
 
-.feautres {
+.form-description h3{
+  padding: 20px 0;
+  margin: 0;
+}
+
+.form-description p {
+  padding-bottom: 30px;
+  margin: 0;
+}
+
+.form h3 {
+  padding: 20px 0;
+  margin: 0;
+}
+
+.text{
+  padding: 1em;
+}
+.form .button{
+  padding: 20px;
+}
+
+.features {
   display: flex;
   justify-content: center;
-
+  padding: 50px 0;
 }
+
+.features h2{
+  margin: 0;
+  padding-bottom: 60px;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
 }
 
+.features article {
+  width: 60%;
+}
+
+.fontawesome-icon{
+  margin: 0;
+  padding: 30px 0 40px 0;
+}
+
+.features-item-description{
+  margin: 0;
+  padding-bottom: 40px;
+}
+
 .reviews {
   display: flex;
   justify-content: center;
+  padding: 50px 0;
+}
 
+.reviews h2 {
+  margin: 0;
+  padding-bottom: 40px;
+}
+
+.reviews h3 {
+  margin: 0;
+  width: 50%;
+  padding: 20px 0;
 }
 
 /*----------------ABOUT--------------*/
@@ -184,6 +284,17 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding: 50px 0 0 0;
+}
+
+.faq h2{
+  margin: 0;
+  padding-bottom: 40px;
+}
+
+.faq-content{
+  margin: 0;
+  padding-bottom: 50px;
 }
 
 
