--- a/css/main.css
+++ b/css/main.css
@@ -107,10 +107,6 @@ header .content-wrapper {
   margin: 0;
 }
 
-img src {
-  width: 60%;
-}
-
 .header-divider {
   width: 100%;
   height: 1px;
@@ -118,10 +114,10 @@ img src {
 }
 header nav {
   display: flex;
-  flex-direction: row;
   width: 60%;
 }
 header nav ul {
+  margin: 0;
   display: flex;
   justify-content: space-around;
   width: 100%;
@@ -132,31 +128,24 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding-top: 50px;
+}
+
+footer p{
+  margin: 0;
 }
 
 footer .content-wrapper{
-  width: 55%
+  width: 55%;
 }
 
-footer .contact h4{
-  padding: 20px 0;
-  margin: 0;
+footer .contact {
+  margin-bottom: 50px;
 }
 
-footer .contact address{
-  padding-bottom: 50px;
-}
-
-footer .social h4 {
-  margin: 0;
-  padding: 20px 0;
-}
 footer .social-icons{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding-bottom: 50px;
 }
 
 footer .social-icons p {
@@ -166,7 +155,7 @@ footer .social-icons p {
 }
 
 footer .copyright{
-  padding: 20px 0;
+  margin: 20px 0;
 }
 
 
@@ -175,83 +164,46 @@ footer .copyright{
 .hero-area {
   display: flex;
   justify-content: center;
-  padding: 50px 0;
 }
 
 aside {
   display: flex;
   justify-content: center;
-  padding: 50px 0;
-}
-
-.form-description h3{
-  padding: 20px 0;
-  margin: 0;
-}
-
-.form-description p {
-  padding-bottom: 30px;
-  margin: 0;
-}
-
-.form h3 {
-  padding: 20px 0;
-  margin: 0;
-}
-
-.text{
-  padding: 1em;
-}
-.form .button{
-  padding: 20px;
 }
 
 .features {
   display: flex;
   justify-content: center;
-  padding: 50px 0;
 }
 
 .features h2{
-  margin: 0;
-  padding-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .features .features-items {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   flex-flow: row wrap;
 }
 
-.features article {
-  width: 60%;
-}
-
-.fontawesome-icon{
+.features p {
   margin: 0;
-  padding: 30px 0 40px 0;
-}
-
-.features-item-description{
-  margin: 0;
-  padding-bottom: 40px;
 }
 
 .reviews {
   display: flex;
   justify-content: center;
-  padding: 50px 0;
+
 }
 
 .reviews h2 {
-  margin: 0;
-  padding-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .reviews h3 {
-  margin: 0;
-  width: 50%;
-  padding: 20px 0;
+  margin: 20px 0;
+  width: 55%;
 }
 
 /*----------------ABOUT--------------*/
@@ -266,11 +218,10 @@ aside {
   justify-content: center;
 }
 
-.faq {
-  display: flex;
-  justify-content: center;
-
+.contact-content p {
+  margin: 0;
 }
+
 
 /*---------------FAQ----------*/
 
@@ -281,20 +232,21 @@ aside {
 
 .faq .content-wrapper {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  
+  align-items: flex-start;
   flex-flow: row wrap;
-  padding: 50px 0 0 0;
+  margin: 50px 0 0 0;
 }
 
-.faq h2{
-  margin: 0;
-  padding-bottom: 40px;
+.faq .content-wrapper h2{
+  margin-bottom: 40px;
+  width: 80%;
 }
 
 .faq-content{
-  margin: 0;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-flow: column wrap;
 }
 
 
@@ -385,16 +337,145 @@ aside {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+/*---------------TABLET STYLES---------------*/
+@media only screen and (min-width: 768px) {
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
+
+  header {
+    padding: 33px 0;
+  }
+
+  header .content-wrapper{
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  header nav{
+    width: 20%;
+  }
+
+  header nav ul{
+    justify-content: space-between;
+  }
+
+  .header-divider{
+    display: none;
+  }
+
+  /*--------------MAIN AREA-------------*/
+
+  aside .content-wrapper{
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+  }
+
+  aside .content-wrapper .form-description, aside .content-wrapper .form{
+    width: 40%;
+    margin: 0;
+  }
+
+  .features article{
+    display: flex;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+  }
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews article div {
+    width: 50%;
+  }
+
+/*--------------FOOTER___________*/
+
+footer .content-wrapper{
+  width: 65%;
+  display: flex;
+  justify-content: space-between;
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+  footer .contact {
+    margin-bottom: 0;
+  }
+
+  footer.copyright {
+    width: 100%;
+  }
+
+/*---------------about-----------*/
+
+.misson .content-wrapper{
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.mission .content-wrapper h2{
+  margin: 0;
+}
+
+.mission-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.mission-content p{
+  margin: 20px 0 0 0;
+  width: 45%
+}
+
+.map{
+  height: 650px;
+}
+
+.contact-section .contact-wrapper h2{
+  width: 80%;
+}
+
+.contact-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+/*-------------FAQ------------*/
+
+.faq .content-wrapper {
+  justify-content: space-between;
+}
+
+.faq-content {
+  flex-basis: 45%;
+}
+
+.faq h2{
+  width: 100%;
+}
+
+}
+
+
+
+/*----------------DESKTOP STYLES---------------*/
+@media only screen and (min-width: 1200px){
+
 }
 
 /* ==========================================================================
