--- a/css/main.css
+++ b/css/main.css
@@ -254,7 +254,7 @@ footer .copyright{
 /*------------HOMEPAGE-------------*/
 
 .hero-area {
-  background: url(../img/retreat.jpg);
+  background: url(../img/retreat.jpg) #333;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -301,7 +301,7 @@ input[type=button]{
 
 
 .features {
-  background: url(../img/retreat-features.jpg);
+  background: url(../img/retreat-features.jpg) #333;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -352,6 +352,23 @@ input[type=button]{
   display: flex;
   justify-content: center;
   background-color: #527158;
+}
+
+.map figure{
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;
+  overflow: hidden;
+  position: relative;
+}
+
+.map iframe{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+
 }
 
 .contact-section {
@@ -581,6 +598,7 @@ input[type=button]{
     width: 50%;
     display: flex;
     justify-content: center;
+    height: 65%;
   }
   .reviews article {
     width: 45%;
@@ -651,8 +669,8 @@ footer .content-wrapper{
   width: 45%
 }
 
-.map{
-  height: 650px;
+.map figure{
+  padding-bottom: 58%;
 }
 
 .contact-section h2{
@@ -679,7 +697,7 @@ footer .content-wrapper{
   width: 100%;
 }
 
-.faq h4, p{
+.faq h4 p{
   font-size: 1.14em;
   line-height: 15.75px;
 }
@@ -691,6 +709,19 @@ footer .content-wrapper{
 /*----------------DESKTOP STYLES---------------*/
 @media only screen and (min-width: 1200px){
 
+  h1{
+    font-size: 3.75em;
+  }
+  h2{
+    font-size: 2.25em;
+  }
+  h3,h4{
+    font-size: 1.875em;
+  }
+  p{
+    font-size: 1.125em;
+    line-height: 24px;
+  }
   .content-wrapper{
     max-width: 960px;
   }
@@ -722,9 +753,30 @@ footer .content-wrapper{
     flex-basis: 26%;
   }
 
+  .reviews article p{
+    line-height: 25px;
+  }
+
+  /*-----------FAQ-------------*/
+
+  .faq .content-wrapper h2{
+    width: 70%;
+  }
+  .faq h2{
+    font-size: 3em;
+  }
+  .faq h4, p{
+    font-size: 1.125em;
+    line-height: 18px;
+  }
+
   /*-----------------ABOUT---------------------*/
-  mission .content-wrapper h2{
+  .mission .content-wrapper h2{
     width: 90%;
+    font-size: 3em;
+  }
+  .map figure{
+    padding-bottom: 75%;
   }
 }
 
